--- a/IBtest/en.lproj/MainStoryboard.storyboard
+++ b/IBtest/en.lproj/MainStoryboard.storyboard
@@ -11,8 +11,52 @@
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nv0-nQ-8Rv">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="namePhonePad" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2" id="dZq-dl-Z85"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GfJ-1a-pHy">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xhb-38-LP0">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="ALu-fF-dXW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Hello">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="changeGreeting:" destination="2" eventType="touchUpInside" id="c1k-zV-Qsr"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="nv0-nQ-8Rv" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="4TD-Db-xgc"/>
+                            <constraint firstItem="GfJ-1a-pHy" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="G8z-Xs-8DG"/>
+                            <constraint firstAttribute="bottom" secondItem="xhb-38-LP0" secondAttribute="bottom" constant="77" id="QO7-a6-HHa"/>
+                            <constraint firstAttribute="trailing" secondItem="GfJ-1a-pHy" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Sq6-u5-1sc"/>
+                            <constraint firstItem="nv0-nQ-8Rv" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="ddS-e4-21k"/>
+                            <constraint firstItem="GfJ-1a-pHy" firstAttribute="top" secondItem="3" secondAttribute="top" constant="220" id="erb-Yh-I5Y"/>
+                            <constraint firstItem="nv0-nQ-8Rv" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="kfM-qD-tHc"/>
+                            <constraint firstItem="GfJ-1a-pHy" firstAttribute="centerX" secondItem="xhb-38-LP0" secondAttribute="centerX" type="default" id="o7W-Ot-C24"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="GfJ-1a-pHy" id="oy5-Zr-Eyb"/>
+                        <outlet property="textField" destination="nv0-nQ-8Rv" id="2tW-Ff-htE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
